Add oom heap dump option